[metadata]
name = pybfbc2stats
version = 0.7.1
description = Python library for retrieving statistics of Battlefield: Bad Company 2 players
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cetteup/pybfbc2stats
project_urls =
    Bug Tracker = https://github.com/cetteup/pybfbc2stats/issues
author = cetteup
author_email = me@cetteup.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = pybfbc2stats
python_requires = >=3.8
